--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!--NAVBAR-->
 <div
   class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
-  <a class="flex align-items-center" href="#">
+  <a class="flex align-items-center" routerLink="/">
     <img
       src="assets/layout/images/{{layoutService._config.colorScheme === 'light' ? 'logoA2-dark' : 'logoA2-white'}}.png"
       alt="Sakai Logo" height="50" class="mr-0 lg:mr-2"><span
