Updated: toggle dark or light mode icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,6 @@
   </ng-template>
 </p-dialog>
 <div class="grid">
-  <button (click)="display=true" pButton icon="pi pi-external-link" label="Mode Sombre ou clair ?"
-          id="dark-switch-custom"></button>
+  <button (click)="display=true" pButton icon="pi pi-sun" id="dark-switch-custom"></button>
 </div>
 <router-outlet/>
