Updated: refacto toggle light into component switch-light.component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
-#dark-switch-custom{
-  position: absolute;
-  top: 2%;
-  left: 2%;
-  background: grey;
-  border: 1px solid grey;
-  box-shadow: 9px 8px 13px 0 black;
-}
+//#dark-switch-custom{
+//  position: absolute;
+//  top: 2%;
+//  left: 2%;
+//  background: grey;
+//  border: 1px solid grey;
+//  box-shadow: 9px 8px 13px 0 black;
+//}
