--- a/src/app/features/about/about/about.component.html
+++ b/src/app/features/about/about/about.component.html
@@ -2,12 +2,13 @@
   <div id="home" class="landing-wrapper overflow-hidden">
     <app-navbar></app-navbar>
 
-    <div class="col-12">
+    <div
+      class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
       <p-splitter [style]="{'height': 'auto'}" [panelSizes]="[20,80]">
         <ng-template pTemplate>
           <div class="col flex align-items-center justify-content-center">
-            <img ngSrc="assets/demo/images/landing/peak-logo.svg" class="mt-4" alt="Company logo" height="50"
-                 width="136">
+            <img ngSrc="assets/layout/images/FAQimage.jpg" class="h-full w-auto" alt="Company logo" height="548"
+                 width="364" priority>
           </div>
         </ng-template>
         <ng-template pTemplate>
