--- a/src/app/features/auth/login/login/login.component.html
+++ b/src/app/features/auth/login/login/login.component.html
@@ -33,7 +33,7 @@
             <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Mot
               de passe oublié ?</a>
           </div>
-          <button pButton pRipple label="S'inscrire" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+          <button pButton pRipple label="Se connecter" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
         </div>
       </div>
     </div>
