--- a/src/app/features/runPublicList/run-public-list/run-public-list.component.html
+++ b/src/app/features/runPublicList/run-public-list/run-public-list.component.html
@@ -68,63 +68,63 @@
             </ng-template>
             <ng-template pTemplate="header">
               <tr>
-                <th style="width: 3rem"></th>
-                <th style="min-width: 12rem">
+                <th style="width: auto"></th>
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Titre
                     <p-columnFilter type="text" field="title" display="menu"
                                     placeholder="Search by title"></p-columnFilter>
                   </div>
                 </th>
-                <th style="min-width: 12rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Lieu
                     <p-columnFilter type="text" field="location" display="menu"
                                     placeholder="Search by location"></p-columnFilter>
                   </div>
                 </th>
-                <th style="min-width: 12rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Difficulté
                     <p-columnFilter type="text" field="difficultyLevel" display="menu"
                                     placeholder="Search by difficulty level"></p-columnFilter>
                   </div>
                 </th>
-                <th style="min-width: 10rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Date
                     <p-columnFilter type="date" field="date" display="menu" placeholder="mm/dd/yyyy"></p-columnFilter>
                   </div>
                 </th>
-                <th style="min-width: 10rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Heure
                     <p-columnFilter type="time" field="time" display="menu" placeholder="hh:mm"></p-columnFilter>
                   </div>
                 </th>
-                <th style="min-width: 10rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Distance (km)
                     <p-columnFilter type="numeric" field="distanceKm" display="menu"></p-columnFilter>
                   </div>
                 </th>
-                <th style="min-width: 10rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Durée (min)
                     <p-columnFilter type="numeric" field="durationMinutes" display="menu"></p-columnFilter>
                   </div>
                 </th>
-                <th style="min-width: 10rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Description
                   </div>
                 </th>
-                <th style="min-width: 10rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Participants
                   </div>
                 </th>
-                <th style="min-width: 10rem">
+                <th style="min-width: auto">
                   <div class="flex justify-content-between align-items-center">
                     Actions
                   </div>
