--- a/src/app/features/contact/contact-form/contact-form.component.html
+++ b/src/app/features/contact/contact-form/contact-form.component.html
@@ -3,7 +3,7 @@
     <app-navbar></app-navbar>
 
     <div id="contactBanner" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden"
-         style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EEEFAF 0%, #C3E3FA 100%); clip-path: ellipse(150% 87% at 93% 13%);">
+         style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #FBF1C4 0%, #F3CDFD 100%); clip-path: ellipse(150% 87% at 93% 13%);">
       <div class="mx-4 md:mx-8 mt-0 md:mt-4" style="height: 180px">
         <h1 class="text-3xl font-bold text-gray-900 line-height-2"><span
           class="font-light block">Formulaire de Contact</span>
