--- a/src/app/core/components/banner/banner.component.html
+++ b/src/app/core/components/banner/banner.component.html
@@ -1,6 +1,6 @@
 <!--BANNER-->
-<div
-  class="bg-bluegray-900 text-gray-100 p-3 flex justify-content-between lg:justify-content-center align-items-center flex-wrap">
+<div *ngIf="isBannerVisible"
+     class="bg-bluegray-900 text-gray-100 p-3 flex justify-content-between lg:justify-content-center align-items-center flex-wrap">
   <div class="font-bold mr-8">🏃‍♀️ Prêt(e) à relever le défi ? Inscris-toi maintenant !</div>
   <div class="align-items-center hidden lg:flex">
     <span class="line-height-3">Ne manque pas les meilleures courses à pied près de chez toi !</span>
@@ -10,7 +10,7 @@
   </a>
   <a pRipple
      class="flex align-items-center no-underline justify-content-center border-circle text-gray-50 hover:bg-bluegray-700 cursor-pointer transition-colors transition-duration-150"
-     style="width:2rem; height: 2rem">
+     style="width:2rem; height: 2rem" (click)="closeBanner()">
     <i class="pi pi-times"></i>
   </a>
 </div>
