--- a/src/app/features/home/homepage/homepage.component.html
+++ b/src/app/features/home/homepage/homepage.component.html
@@ -44,7 +44,7 @@
         <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
           <div
             style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145,226,237,0.2),rgba(251, 199, 145, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2), rgba(172, 180, 223, 0.2));">
-            <div class="p-3 surface-card h-full" style="border-radius:8px;">
+            <div class="p-3 surface-card h-full fadeinup animation-duration-2000" style="border-radius:8px;">
               <div class="flex align-items-center justify-content-center bg-cyan-200 mb-3"
                    style="width:3.5rem;height:3.5rem; border-radius:10px;">
                 <i class="pi pi-fw pi-palette text-2xl text-cyan-700"></i>
@@ -58,7 +58,7 @@
         <div class="col-12 md:col-12 lg:col-4 p-0 lg:pb-5 mt-4 lg:mt-0">
           <div
             style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 226, 237, 0.2), rgba(172, 180, 223, 0.2)), linear-gradient(180deg, rgba(172, 180, 223, 0.2), rgba(246, 158, 188, 0.2));">
-            <div class="p-3 surface-card h-full" style="border-radius:8px;">
+            <div class="p-3 surface-card h-full fadeinright animation-duration-2000" style="border-radius:8px;">
               <div class="flex align-items-center justify-content-center bg-indigo-200"
                    style="width:3.5rem;height:3.5rem; border-radius:10px;">
                 <i class="pi pi-fw pi-map text-2xl text-indigo-700"></i>
@@ -72,7 +72,7 @@
         <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
           <div
             style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(187, 199, 205, 0.2),rgba(251, 199, 145, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2),rgba(145, 210, 204, 0.2));">
-            <div class="p-3 surface-card h-full" style="border-radius:8px;">
+            <div class="p-3 surface-card h-full fadeinleft animation-duration-2000" style="border-radius:8px;">
               <div class="flex align-items-center justify-content-center bg-bluegray-200 mb-3"
                    style="width:3.5rem;height:3.5rem; border-radius:10px;">
                 <i class="pi pi-fw pi-id-card text-2xl text-bluegray-700"></i>
@@ -100,7 +100,7 @@
         <div class="col-12 md:col-12 lg:col-4 p-0 lg:pb-5 mt-4 lg:mt-0">
           <div
             style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 210, 204, 0.2), rgba(160, 210, 250, 0.2)), linear-gradient(180deg, rgba(187, 199, 205, 0.2), rgba(145, 210, 204, 0.2));">
-            <div class="p-3 surface-card h-full" style="border-radius:8px;">
+            <div class="p-3 surface-card h-full fadeinright animation-duration-2000" style="border-radius:8px;">
               <div class="flex align-items-center justify-content-center bg-pink-200 mb-3"
                    style="width:3.5rem;height:3.5rem; border-radius:10px;">
                 <i class="pi pi-fw pi-moon text-2xl text-pink-700"></i>
@@ -114,7 +114,7 @@
         <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 mt-4 lg:mt-0">
           <div
             style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(160, 210, 250, 0.2), rgba(212, 162, 221, 0.2)), linear-gradient(180deg, rgba(246, 158, 188, 0.2), rgba(212, 162, 221, 0.2));">
-            <div class="p-3 surface-card h-full" style="border-radius:8px;">
+            <div class="p-3 surface-card h-full fadeinleft animation-duration-2000" style="border-radius:8px;">
               <div class="flex align-items-center justify-content-center bg-purple-200 mb-3"
                    style="width:3.5rem;height:3.5rem; border-radius:10px;">
                 <i class="pi pi-fw pi-shopping-cart text-2xl text-teal-700"></i>
@@ -128,7 +128,7 @@
         <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 mt-4 lg:mt-0">
           <div
             style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 210, 204, 0.2), rgba(212, 162, 221, 0.2)), linear-gradient(180deg, rgba(251, 199, 145, 0.2), rgba(160, 210, 250, 0.2));">
-            <div class="p-3 surface-card h-full" style="border-radius:8px;">
+            <div class="p-3 surface-card h-full fadeindown animation-duration-2000" style="border-radius:8px;">
               <div class="flex align-items-center justify-content-center bg-blue-200 mb-3"
                    style="width:3.5rem;height:3.5rem; border-radius:10px;">
                 <i class="pi pi-fw pi-globe text-2xl text-blue-700"></i>
@@ -142,7 +142,7 @@
         <div class="col-12 md:col-12 lg:col-4 p-0 lg-4 mt-4 lg:mt-0">
           <div
             style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(160, 210, 250, 0.2), rgba(212, 162, 221, 0.2)), linear-gradient(180deg, rgba(246, 158, 188, 0.2), rgba(212, 162, 221, 0.2));">
-            <div class="p-3 surface-card h-full" style="border-radius:8px;">
+            <div class="p-3 surface-card h-full fadeinright animation-duration-2000" style="border-radius:8px;">
               <div class="flex align-items-center justify-content-center bg-purple-200 mb-3"
                    style="width:3.5rem;height:3.5rem; border-radius:10px;">
                 <i class="pi pi-fw pi-eye text-2xl text-purple-700"></i>
