--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,5 +1,7 @@
 <div class="layout-footer">
-    <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="20" class="mr-2"/>
-    by
-    <span class="font-medium ml-2">PrimeNG</span>
+  <img
+    src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logoA2-dark' : 'logoA2-white'}}.png"
+    alt="Logo" height="20" class="mr-2"/>
+  by
+  <span class="font-medium ml-2">A2 Run Alliance</span>
 </div>
