Updated : animation for dashboard home

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,4 @@
 @import "assets/demo/styles/badges.scss";
 @import "assets/demo/styles/code.scss";
 
+@import "app/core/components/welcome-dashboard/welcome-dashboard.component";
