Updated : logo color for dark or light mode + toggle light and dark mode

--- a/src/app/core/components/switch-light/switch-light.component.html
+++ b/src/app/core/components/switch-light/switch-light.component.html
@@ -1,21 +1,1 @@
-<p-dialog header="Protégez vos yeux" [(visible)]="display" [modal]="true" showEffect="fade" [style]="{width: '30vw'}"
-          [breakpoints]="{'960px': '75vw'}">
-  <div class="text-xl mb-3">
-    @if (isDarkMode) {
-      Sombre 🌚
-    } @else {
-      Clair 🌞
-    }
-  </div>
-  <p-inputSwitch
-    [ngModel]="isDarkMode"
-    (ngModelChange)="toggleLightDark()"
-    name="dark-mode-switch"
-  />
-  <ng-template pTemplate="footer">
-    <button pButton icon="pi pi-check" (click)="display=false" label="Ok" class="p-button-outlined"></button>
-  </ng-template>
-</p-dialog>
-<div class="grid">
-  <button (click)="display=true" pButton icon="pi pi-sun" id="dark-switch-custom"></button>
-</div>
+<button pButton type="button" label="Toggle Theme" icon="pi pi-moon" (click)="toggleTheme()"></button>
