--- a/src/app/features/NotFound/not-found/not-found.component.html
+++ b/src/app/features/NotFound/not-found/not-found.component.html
@@ -1,11 +1,12 @@
 <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
   <div class="flex flex-column align-items-center justify-content-center">
-    <img ngSrc="assets/layout/images/logoA2-dark.png" alt="A2 logo" class="mb-5 w-6rem flex-shrink-0 w-full h-auto"
-         height="49" width="50">
+    <img
+      src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logoA2-dark' : 'logoA2-white'}}.png"
+      alt="Sakai logo" class="mb-5 w-6rem flex-shrink-0">
     <div
       style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, rgb(243,205,253) 10%, rgba(33, 150, 243, 0) 30%);">
       <div class="w-full surface-card py-8 px-5 sm:px-8 flex flex-column align-items-center" style="border-radius:53px">
-        <span class="text-blue-500 font-bold text-3xl">404</span>
+        <span class="text-blue-500 font-bold text-5xl">404</span>
         <h1 class="text-900 font-bold text-3xl lg:text-5xl mb-2">Page non trouvée</h1>
         <div class="text-600 mb-5">La page demandée n'existe pas</div>
         <a [routerLink]="['/about']" class="w-full flex align-items-center py-5 border-300 border-bottom-1">
