Updated : switch button

--- a/src/app/core/components/switch-light/switch-light.component.html
+++ b/src/app/core/components/switch-light/switch-light.component.html
@@ -1,1 +1,1 @@
-<button pButton type="button" label="Toggle Theme" icon="pi pi-moon" (click)="toggleTheme()"></button>
+<button pButton type="button" label="" icon="pi pi-moon" class="bg-auto" (click)="toggleTheme()"></button>
