--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,4 @@
 @import "assets/demo/styles/code.scss";
 
 @import "app/core/components/welcome-dashboard/welcome-dashboard.component";
+@import "app/core/components/switch-light/switch-light.component.scss";
