--- a/src/app/features/NotFound/not-found/not-found.component.html
+++ b/src/app/features/NotFound/not-found/not-found.component.html
@@ -29,6 +29,16 @@
                         <span class="text-600 lg:text-xl">Contactez nous grâce à notre formulaire.</span>
                     </span>
         </a>
+        <a [routerLink]="['/']" class="w-full flex align-items-center py-5 border-300 border-bottom-1">
+                    <span class="flex justify-content-center align-items-center bg-green-400 border-round"
+                          style="height:3.5rem; width:3.5rem;">
+                        <i class="pi pi-fw pi-home text-50 text-2xl"></i>
+                    </span>
+          <span class="ml-4 flex flex-column">
+                        <span class="text-900 lg:text-xl font-medium mb-0">Accueil</span>
+                        <span class="text-600 lg:text-xl">Retour sur le site.</span>
+                    </span>
+        </a>
       </div>
     </div>
   </div>
