--- a/src/app/features/auth/login/login/login.component.html
+++ b/src/app/features/auth/login/login/login.component.html
@@ -21,7 +21,7 @@
                  class="w-full md:w-30rem mb-5" style="padding:1rem">
 
           <label for="password1" class="block text-900 font-medium text-xl mb-2">Mot de passe</label>
-          <p-password id="password1" [(ngModel)]="password" placeholder="Entrez votre mot de passe" [toggleMask]="true"
+          <p-password id="password1" [(ngModel)]="password" placeholder="Entrez votre mot de passe" [toggleMask]="true" [feedback]="false"
                       styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
           <div class="flex align-items-center justify-content-between mb-5 gap-5">
