Added : css for navbar buttons

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,4 @@
 
 @import "app/core/components/welcome-dashboard/welcome-dashboard.component";
 @import "app/core/components/switch-light/switch-light.component.scss";
+@import "app/core/components/navbar/navbar.component";
