Added : navbar buttons depending on authentication status

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -48,10 +48,22 @@
     </ul>
     <div
       class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
-      <button pButton pRipple label="Se connecter" routerLink="/login"
-              class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
-      <button pButton pRipple label="S'inscrire" routerLink="/register"
-              class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
+      <!-- Si l'utilisateur n'est pas connecté, afficher les boutons 'Se connecter' et 'S'inscrire' -->
+      <ng-container *ngIf="!isAuthenticated">
+        <button pButton pRipple label="Se connecter" routerLink="/login"
+                class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
+        <button pButton pRipple label="S'inscrire" routerLink="/register"
+                class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
+      </ng-container>
+
+      <!-- Si l'utilisateur est connecté, afficher le bouton 'Se déconnecter' et l'avatar -->
+      <ng-container *ngIf="isAuthenticated" id="custom-buttons-navbar">
+        <button pButton pRipple label="Se déconnecter" (click)="logout()"
+                class="p-button-text ml-5 p-button-rounded border-none font-light line-height-2 bg-gray-500 text-white"></button>
+        <div class="flex flex-wrap align-items-center">
+<!--          <p-chip [label]="userEmail" image="assets/demo/images/avatar/amyelsner.png" styleClass="m-1"></p-chip>-->
+        </div>
+      </ng-container>
     </div>
   </div>
 </div>
